--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: hamyar shop
+Theme Name: همیار شاپ
 Author: alireza azami
-Version: 1.0
+Version: 1.1
 Requires at least: 5.0
 Tested up to: 5.6
 Requires PHP: 7.0
