add simple theme menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1174,3 +1174,11 @@ border-collapse: separate;
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/*#navbar-top .navbar-nav .menu-item{*/
+/*    margin-left: .25rem!important;*/
+/*}*/
+
+/*#navbar-top .navbar-nav .menu-item a{*/
+/*    padding: .5rem 1rem;*/
+/*}*/
