--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,5 +1196,14 @@ body.single-post .previous-post-link a
     position: relative;
     top: 7px;
 }
+#single-post-tag-list a{
+    color: #000;
+    font-size: 14px;
+    font-weight: 300;
+    transition: 0.3s;
+    padding: .25rem 1rem;
+    border-radius: 50rem;
+    background-color: #f8f9fa;
 
+}
 /*end single post style*/
