--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1,3 +1,9 @@
 .woocommerce .woocommerce-breadcrumb{
     margin-bottom:0;
 }
+.entry-summary{
+    padding: 10px 0 0 10px;
+}
+.entry-summary h1{
+    font-size: 1.5rem;
+}
