--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -189,6 +189,16 @@ a.woocommerce-loop-product__link:hover h2{
     border-radius: 20px;
     font-weight: 700;
 }
+
+.woocommerce ul.products li.product .added_to_cart  {
+    margin-top: 10px;
+    background: #44bd32;
+    color: white;
+    font-size: 16px;
+    border-radius: 20px;
+    font-weight: 700;
+    padding: 5px 10px;
+}
 .woocommerce ul.products li.product:hover .button {
     background-color: #44bd32;
     color: #fff;
