--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -65,7 +65,6 @@ outline: none;
 .woocommerce div.product form.cart div.quantity input{
     display: block;
     height: calc(1.5em + .75rem + 2px);
-    padding: .175rem .75rem .175rem 0;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -73,7 +72,9 @@ outline: none;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: .25rem;
+    width: 40px;
+    padding: 0;
+    border-radius: 5px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .woocommerce div.product form.cart .button{
@@ -257,6 +258,30 @@ a.woocommerce-loop-product__link:hover h2{
     display: inline-block;
     /*color: white!important;*/
 }
+#quantity_changer{
+    display: inline-block;
+}
+.product-type-simple #quantity_changer{
+    display: block;
+    float: right;
+    width: 100%;
+}
+
+#quantity_changer>*{
+    float: right;
+}
+#quantity_changer .fa-plus-circle{
+    font-size: 25px;
+    margin: 5px;
+    color: gray;
+    cursor: pointer;
+}
+#quantity_changer .fa-minus-circle{
+    font-size: 25px;
+    margin: 5px;
+    color: gray;
+    cursor: pointer;
+}
 /*end of single product style*/
 
 /*start woocommerce archive page style*/
@@ -299,6 +324,7 @@ a.woocommerce-loop-product__link:hover h2{
     width: 3.631em;
     text-align: center;
     border: 1px solid #ced4da;
+    padding: 5px;
     border-radius: 40px;
 }
 .woocommerce .quantity .qty:focus-visible {
