--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -498,6 +498,11 @@ textarea,
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.woocommerce-table,.woocommerce-thankyou-order-details,.woocommerce-customer-details address{
+    background: white;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+    padding: 20px!important;
+}
 /*end woocommerce checkout page style*/
 
 
