--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -498,7 +498,7 @@ textarea,
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-.woocommerce-table,.woocommerce-thankyou-order-details,.woocommerce-customer-details address,.woocommerce-EditAccountForm.edit-account{
+.woocommerce-table,.woocommerce-thankyou-order-details,.woocommerce-customer-details address{
     background: white;
     box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
     padding: 20px!important;
@@ -508,6 +508,9 @@ textarea,
 .woocommerce-EditAccountForm.edit-account input,.woocommerce-EditAccountForm.edit-account select{
     border-radius: 10px;
     border:1px solid #dbdbdb;
+}
+.edit-address .form-row{
+    display: block!important;
 }
 
 @media all and (max-width: 500px) {
